# neonat

./: .gitignore  README.md  exc.py  initialize_project.bat  launch_main.bat  neonat_baby_move.py  pyproject.toml  requirement.txt  run_bed_allocation.py  update_pkg.bat  utils.py
scenarios/exemple/: input_exemple.xlsx
scripts/: calc_bed_allocation.py  exc.py  read_input.py
tests/: launch_test.py
tests/nrt1/: input_nrt1.xlsx
tests/nrt2/: input_nrt2.xlsx
tests/nrt3/: input_nrt3.xlsx
tests/nrt4/: input_nrt4.xlsx
tests/nrt5/: input_nrt5.xlsx
tests/nrt6/: input_nrt6.xlsx
tests/nrt7/: input_nrt7.xlsx
tests/test_log/: input_test_log.xlsx
tests/test_priority/: input_test_priority.xlsx
