[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neonat_baby_move"
version = "0.1.0"
authors = [
  { name="Antoine de Muizon", email="antoinedemuizon@hotmail.fr" },
]
description = "A tool giving the best allocation of rooms for babies in the hospital' neonatalogy department."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
'colorama',
'exceptiongroup',
'gamspy',
'iniconfig',
'openpyxl',
'packaging',
'pip',
'pluggy',
'pytest',
'setuptools',
'tomli',
'wheel',
]

[project.urls]
Homepage = "https://github.com/antoinedemuizon/neonat.git"
